<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.LoginActivity"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/intermedium"
        android:text="@string/login"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/by_signing_in_you_are_agreeing_nour_term_and_privacy_policy"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginStart="12dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/RegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/emailUserEditText"
        android:layout_width="320dp"
        android:fontFamily="@font/interextralight"
        android:layout_height="wrap_content"
        android:background="@drawable/back_email"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTextView" />

    <EditText
        android:id="@+id/paswordEditTextPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/eye"
        android:drawablePadding="15dp"
        android:ems="10"
        android:background="@drawable/back_email"
        android:fontFamily="@font/interextralight"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUserEditText" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@+id/paswordEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/paswordEditTextPassword" />

    <TextView
        android:id="@+id/forgetPassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/paswordEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/paswordEditTextPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_thing"
        android:text="@string/login_o"
        app:layout_constraintEnd_toEndOf="@+id/paswordEditTextPassword"
        app:layout_constraintStart_toStartOf="@+id/paswordEditTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/paswordEditTextPassword" />

    <TextView
        android:id="@+id/signUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_with"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        tools:layout_editor_absoluteY="574dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signUpWith">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/facebook" />

        <ImageView
            android:id="@+id/githubIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/github" />

        <ImageView
            android:id="@+id/twitterIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="12dp"
            android:background="@drawable/twitter" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>